<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.swy.Register">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:text="@string/textView7"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/editText8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EditText8"
        android:layout_marginTop="52dp"
        android:text="@string/textView8"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/EditText8"
        android:layout_alignRight="@+id/EditText8"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="61dp"
        android:text="@string/textView9"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignEnd="@+id/editText9"
        android:layout_alignRight="@+id/editText9"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="53dp"
        android:text="@string/textView10"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignEnd="@+id/editText10"
        android:layout_alignRight="@+id/editText10"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText11"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText11"
        android:layout_marginBottom="67dp"
        android:text="@string/button5" />
</RelativeLayout>
